[package]
name = "spawn-wasm-erc721"
version = "0.1.2"
authors = ["nzengi <zenginureddin1@gmail.com>"]
edition = "2018"
description = "A Rust library for creating ERC-721 compliant Non-Fungible Tokens (NFTs) with WebAssembly (WASM) support."
license = "MIT"
repository = "https://github.com/nzengi/erc721"
documentation = "https://docs.rs/erc721"
homepage = "https://github.com/nzengi/erc721"
keywords = ["ERC721", "NFT", "WebAssembly", "WASM"]
categories = ["cryptography", "wasm", "blockchain", "smart-contracts"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = { version = "0.1", optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.stdweb]
version = "0.4"

[build-dependencies]
wasm-bindgen-cli = "0.2"

