[package]
name = "spawn-wasm-erc721"
version = "0.1.3"
authors = ["nzengi <zenginureddin1@gmail.com>"]
edition = "2018"
description = "A Rust library for creating ERC-721 compliant Non-Fungible Tokens (NFTs) with WebAssembly (WASM) support."
license = "MIT"
repository = "https://github.com/nzengi/spawn-wasm-erc721"
documentation = "https://docs.rs/erc721"
homepage = "https://github.com/nzengi/spawn-wasm-erc721"
keywords = ["ERC721", "NFT", "WebAssembly", "WASM"]
categories = ["cryptography", "wasm"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies.console_error_panic_hook]
version = "0.1.6"
optional = true

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
