[package]
name = "spawn-wasm-erc721"
version = "0.1.4"
authors = ["nzengi <zenginureddin1@gmail.com>"]
edition = "2018"
description = "A Rust library for creating ERC-721 compliant Non-Fungible Tokens (NFTs) with WebAssembly (WASM) support."
license = "MIT"
repository = "https://github.com/nzengi/spawn-wasm-erc721"

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["rlib", "cdylib"]


[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O2"]
